--- a/src/app/overview/api-documentation/api-documentation.component.html
+++ b/src/app/overview/api-documentation/api-documentation.component.html
@@ -21,7 +21,7 @@
               Required: <code>Api key</code>
             </li>
             <div class="explanation">
-              Your API key. Claim your free API key in <a [routerLink]="['/web/user-profile']" class="profile-link">My Profile</a>
+              Your API key. Claim your free API key in <a [routerLink]="['/overview/user-profile']" class="profile-link">My Profile</a>
             </div>
           </ul>
         </div>
@@ -55,7 +55,7 @@
               Required: <code>Api key</code>
             </li>
             <div class="explanation">
-              Your API key. Claim your free API key in <a [routerLink]="['/web/user-profile']" class="profile-link">My Profile</a>
+              Your API key. Claim your free API key in <a [routerLink]="['/overview/user-profile']" class="profile-link">My Profile</a>
             </div>
           </ul>
         </div>
@@ -140,7 +140,7 @@
             <div class="explanation">
               This filter will include out all ratings from a specific date. Format : Year-Month-Day. Example: 1970-07-15
             </div>
-            <li  class="option optional">
+            <li class="option optional">
               Optional: <code>toDate</code>
             </li>
             <div class="explanation">
@@ -150,7 +150,7 @@
               Required: <code>Api key</code>
             </li>
             <div class="explanation">
-              Your API key. Claim your free API key in <a [routerLink]="['/web/user-profile']" class="profile-link">My Profile</a>
+              Your API key. Claim your free API key in <a [routerLink]="['/overview/user-profile']" class="profile-link">My Profile</a>
             </div>
           </ul>
         </div>
