--- a/src/app/overview/summary-page/summary-page.component.html
+++ b/src/app/overview/summary-page/summary-page.component.html
@@ -102,7 +102,7 @@
         </div>
       </div>
     </div>
-    <div class="details-container">
+    <div class="details-container" *ngIf="allStats">
       <div class="flex-container">
         <div class="picture-display">
           <div class="col-md-12 text-allign">
@@ -114,8 +114,8 @@
           </div>
         </div>
         <div class="most-important-data">
-          <app-summary-rating-table style="width: 100%" [ratings]="locationSummaryList" ></app-summary-rating-table>
-          <app-summary-preferences style="width: 100%" [preferences]="locationSummaryList" ></app-summary-preferences>
+          <app-summary-rating-table style="width: 100%" [ratings]="allStats.ratingData" ></app-summary-rating-table>
+          <app-summary-preferences style="width: 100%" [preferences]="allStats" ></app-summary-preferences>
         </div>
         <div class="most-optional-data">
           <app-summary-gender style="width: 100%" [genderData]="locationSummaryList" ></app-summary-gender>
