--- a/src/app/overview/summary-page/summary-rating-table/summary-rating-table.component.html
+++ b/src/app/overview/summary-page/summary-rating-table/summary-rating-table.component.html
@@ -5,15 +5,15 @@
       <thead>
       <tr>
         <th scope="col" sortable="name" (sort)="onSort($event)">Question</th>
-        <th scope="col" sortable="count" (sort)="onSort($event)">Total Rated</th>
-        <th scope="col" sortable="average"  (sort)="onSort($event)">Average</th>
+        <th scope="col" sortable="id" (sort)="onSort($event)">Total Rated</th>
+        <th scope="col" sortable="id"  (sort)="onSort($event)">Average</th>
       </tr>
       </thead>
       <tbody>
       <tr *ngFor="let question of currentQuestionList ; index as i">
         <td scope="row" class="simple-table-text">{{question.name}}</td>
-        <td> {{question.id}} </td>
-        <td> {{question.id}} </td>
+        <td> {{question.totalCount | number}} </td>
+        <td> {{question.average}} </td>
       </tr>
       </tbody>
     </table>
