--- a/src/app/overview/summary-page/summary-page.component.scss
+++ b/src/app/overview/summary-page/summary-page.component.scss
@@ -140,3 +140,15 @@
 .table th, .table td {
   padding: 0.5rem 0.75rem !important;
 }
+
+.decrease-margin{
+  margin-top: 10px !important;
+}
+
+.select-button{
+  font-size: 1.3rem;
+}
+
+.increase-margin{
+  margin-top: 30px !important;
+}
