--- a/src/app/overview/summary-page/summary-rating-table/summary-rating-table.component.html
+++ b/src/app/overview/summary-page/summary-rating-table/summary-rating-table.component.html
@@ -4,9 +4,9 @@
     <table class="table table-striped">
       <thead>
       <tr>
-        <th scope="col" sortable="name" (sort)="onSort($event)">Question</th>
+        <th scope="col" sortable="name" (sort)="onSort($event)">Rating Parameter</th>
         <th scope="col" sortable="id" (sort)="onSort($event)">Total Rated</th>
-        <th scope="col" sortable="id"  (sort)="onSort($event)">Average</th>
+        <th scope="col" sortable="id"  (sort)="onSort($event)">Average Rating</th>
       </tr>
       </thead>
       <tbody>
