--- a/src/app/admin/users/users.component.html
+++ b/src/app/admin/users/users.component.html
@@ -9,12 +9,12 @@
   <table class="table table-striped">
     <thead>
     <tr>
-      <th scope="col">#</th>
-      <th scope="col">Name</th>
+      <th scope="col" (click)="onSort('id')">#</th>
+      <th scope="col" (click)="onSort('firstName')">Name</th>
     </tr>
     </thead>
     <tbody>
-    <tr *ngFor="let user of usersPage;">
+    <tr *ngFor="let user of usersPage;" [routerLink]="['/admin/userDetails', user.uId]">
       <td style="width: 20%">{{ user.id}}</td>
       <td style="width: 80%">{{user.firstName}}</td>
     </tr>
