--- a/src/app/admin/resorts/resorts.component.html
+++ b/src/app/admin/resorts/resorts.component.html
@@ -14,7 +14,7 @@
     </tr>
     </thead>
     <tbody>
-    <tr *ngFor="let resort of resortsPage;">
+    <tr *ngFor="let resort of resortsPage;" [routerLink]="['/admin/resortDetails', resort.id]">
       <td style="width: 20%">{{ resort.id}}</td>
       <td style="width: 80%">{{resort.name}}</td>
     </tr>
