Resort Details View update

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,5 @@
-<main style="height: 100vh; width: 100vw;" role="main" class="container-fluid">
+<main role="main" class="container-fluid">
   <router-outlet></router-outlet>
 </main>
-
 <app-size-detector></app-size-detector>
 
