--- a/src/app/admin/resort-details/resort-details.component.html
+++ b/src/app/admin/resort-details/resort-details.component.html
@@ -1,56 +1,62 @@
 <header>
   <app-navbar></app-navbar>
 </header>
-<div *ngIf="resort" class="main bg-image-search">
-  <div class="main details-container">
-  <div class="d-inline-flex">
-    <h1>{{resort.CityName}}</h1>
-    <h2>{{resort.CountryName}}</h2>
-  </div>
-    <div class="d-inline-flex">
-      {{resort.Website}}
-    </div>
-  <div>
-    Airports
-  <table class="table table-striped">
-    <thead>
-    <tr>
-      <th scope="col" >#</th>
-      <th scope="col">Name</th>
-      <th scope="col">City</th>
-      <th scope="col">Country</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr *ngFor="let airport of resort.Airports; let i = index">
-      <td>{{i+1}}</td>
-      <td>{{airport.name}}</td>
-      <td>{{airport.city}}</td>
-      <td>{{airport.country}}</td>
-    </tr>
-    </tbody>
-  </table>
-  </div>
-  <div class="details-container">
-    <div class="col">Elevation</div>
+<div class="bg-image-search"></div>
+<div *ngIf="resort" class="main">
+  <div class="container details-container">
     <div class="row">
-      <div class="col">Max</div>
-      <div class="col">Min</div>
-    </div>
-    <div class="row">
-      <div class="col">{{resort.ElevationInfo.max}}</div>
-      <div class="col">{{resort.ElevationInfo.min}}</div>
-    </div>
-  </div>
-    <div class="details-container">
-      <div class="col text-center">Coordinates</div>
-      <div class="row">
-        <div class="col text-center">Lat</div>
-        <div class="col text-center">Long</div>
+    <div class="col">
+      <div>
+        Airports
+        <table class="table table-striped">
+          <thead>
+          <tr>
+            <th scope="col" >#</th>
+            <th scope="col">Name</th>
+            <th scope="col">City</th>
+            <th scope="col">Country</th>
+          </tr>
+          </thead>
+          <tbody>
+          <tr *ngFor="let airport of resort.Airports; let i = index">
+            <td>{{i+1}}</td>
+            <td>{{airport.name}}</td>
+            <td>{{airport.city}}</td>
+            <td>{{airport.country}}</td>
+          </tr>
+          </tbody>
+        </table>
       </div>
-      <div class="row">
-        <div class="col text-center">{{resort.Latitude}}</div>
-        <div class="col text-center">{{resort.Longitude}}</div>
+    </div>
+    <div class="col">
+      <div class="d-inline-flex">
+        <h1>{{resort.CityName}}</h1>
+        <h2>{{resort.CountryName}}</h2>
+      </div>
+      <div class="d-inline-flex">
+        {{resort.Website}}
+      </div>
+      <div style="width: 50%" class="details-container">
+        <div class="col">Elevation</div>
+        <div class="row">
+          <div class="col">Max</div>
+          <div class="col">Min</div>
+        </div>
+        <div class="row">
+          <div class="col">{{resort.ElevationInfo.max}}</div>
+          <div class="col">{{resort.ElevationInfo.min}}</div>
+        </div>
+      </div>
+      <div class="details-container">
+        <div class="col text-center">Coordinates</div>
+        <div class="row">
+          <div class="col text-center">Lat</div>
+          <div class="col text-center">Long</div>
+        </div>
+        <div class="row">
+          <div class="col text-center">{{resort.Latitude}}</div>
+          <div class="col text-center">{{resort.Longitude}}</div>
+        </div>
       </div>
     </div>
   </div>
