--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<main role="main" class="container-fluid">
+<main style="height: 100vh" role="main" class="container-fluid">
   <router-outlet></router-outlet>
 </main>
 <app-size-detector></app-size-detector>
