--- a/src/app/styles/common.sass
+++ b/src/app/styles/common.sass
@@ -8,6 +8,8 @@
   -o-background-size: cover
   background-size: cover
   z-index: -1
+  filter: blur(8px)
+  -webkit-filter: blur(8px)
   @include media-portrait-down(lg)
     background: url('https://firebasestorage.googleapis.com/v0/b/ratoong-dev.appspot.com/o/service-images%2Fbackgrounds%2Fbg-m-default.jpg?alt=media&token=0b7a6037-a284-47e9-9479-348061170ff2') no-repeat
     background-size: cover
@@ -20,6 +22,8 @@
   min-height: 100vh
   min-width: 100%
   position: fixed
+  filter: blur(8px)
+  -webkit-filter: blur(8px)
   z-index: -1
   @include media-portrait-down(lg)
     background: url('https://firebasestorage.googleapis.com/v0/b/ratoong-333eb.appspot.com/o/service-images%2Fbackgrounds%2Fbg-m-rate.jpg?alt=media&token=96baae81-77aa-413e-a94c-d23bb4b99340') no-repeat
