--- a/src/app/admin/resort-details/resort-details.component.scss
+++ b/src/app/admin/resort-details/resort-details.component.scss
@@ -9,6 +9,7 @@
 }
 td, th{
   color: white;
+  font-size: 0.75em;
 }
 .details-container {
   font-family: "Oswald";
@@ -27,4 +28,12 @@ h1, h2{
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+.dot {
+  height: 25px;
+  width: 25px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  margin: 5px;
 }
