--- a/src/app/admin/resort-details/resort-details.component.html
+++ b/src/app/admin/resort-details/resort-details.component.html
@@ -27,7 +27,9 @@
           </tbody>
         </table>
       </div>
-    <div class="row details-container">
+      <div>
+      Pistes
+    <div style="margin: 0" class="row details-container">
       <div class="col align-items-start">
         <span>Easy</span>
         <span>Medium</span>
@@ -48,6 +50,7 @@
         <span>{{resort.ThePiste[3].km}}km</span>
       </div>
     </div>
+      </div>
     </div>
     <div class="col">
       <div class="d-inline-flex">
@@ -57,8 +60,9 @@
       <div class="d-inline-flex">
         {{resort.Website}}
       </div>
-      <div style="width: 50%" class="details-container">
-        <div class="col">Elevation</div>
+      <div>
+        Elevation
+      <div style="margin: 0" class="details-container">
         <div class="row">
           <div class="col"><i class="fas fa-sort-amount-up-alt"></i></div>
           <div class="col"><i class="fas fa-sort-amount-down-alt"></i></div>
@@ -68,8 +72,10 @@
           <div class="col">{{resort.ElevationInfo.min}}</div>
         </div>
       </div>
-      <div class="details-container">
-        <div class="col text-center">Coordinates</div>
+      </div>
+      <div>
+      Coordinates
+      <div style="margin: 0" class="details-container">
         <div class="row">
           <div class="col text-center"><i class="fas fa-arrows-alt-v"></i></div>
           <div class="col text-center"><i class="fas fa-arrows-alt-h"></i></div>
@@ -78,6 +84,7 @@
           <div class="col text-center">{{resort.Latitude}}</div>
           <div class="col text-center">{{resort.Longitude}}</div>
         </div>
+      </div>
       </div>
     </div>
   </div>
