--- a/src/app/admin/resort-details/resort-details.component.scss
+++ b/src/app/admin/resort-details/resort-details.component.scss
@@ -4,11 +4,9 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  color: white;
   height: 100%;
 }
 td, th{
-  color: white;
   font-size: 0.75em;
 }
 .details-container {
@@ -17,7 +15,7 @@ td, th{
   margin: 20px;
   padding: 1em 2em;
   border: 1px solid $color-light-gray-83;
-  background-color: rgb(43, 60, 74, 0.8);
+  background-color: rgba(255, 255, 255, 0.8);
 }
 h1, h2{
   padding: 10px;
