--- a/src/app/admin/resorts/resorts.component.scss
+++ b/src/app/admin/resorts/resorts.component.scss
@@ -1,9 +1,19 @@
+@import "./src/styles";
+
 .main{
-  height: 100%;
+  height: 85%;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+}
+.details-container {
+  font-family: "Oswald";
+  font-weight: 500 ;
+  margin: 50px;
+  padding: 2em 4em;
+  border: 1px solid $color-light-gray-83;
+  background-color: rgba(255, 255, 255, 0.8);
 }
 table{
   width: 50%;
