--- a/src/app/admin/user-details/user-details.component.scss
+++ b/src/app/admin/user-details/user-details.component.scss
@@ -1,7 +1,24 @@
+@import "./src/styles";
 .main{
   height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+}
+td, th{
+  font-size: 0.75em;
+}
+.col {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.details-container {
+  font-family: "Oswald";
+  font-weight: 300 ;
+  padding: 1em 2em;
+  border: 1px solid $color-light-gray-83;
+  background-color: rgba(255, 255, 255, 0.8);
 }
