--- a/src/app/admin/users/users.component.scss
+++ b/src/app/admin/users/users.component.scss
@@ -1,5 +1,6 @@
+@import "./src/styles";
 .main{
-  height: 100%;
+  height: 85%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -8,4 +9,12 @@
 table{
   width: 50%;
   border: #0A0A0A 2px solid;
+}
+.details-container {
+  font-family: "Oswald";
+  font-weight: 500 ;
+  margin: 50px;
+  padding: 2em 4em;
+  border: 1px solid $color-light-gray-83;
+  background-color: rgba(255, 255, 255, 0.8);
 }
