--- a/src/app/admin/resort-details/resort-details.component.html
+++ b/src/app/admin/resort-details/resort-details.component.html
@@ -7,7 +7,7 @@
     <div style="padding-top: 15px; padding-bottom: 15px" class="row">
     <div style="align-items: flex-start; justify-content: space-between" class="col">
       <div class="d-flex flex-column align-items-lg-end">
-        <table style="border: #9f9f9f solid 1px; margin: 0px 0 10px 10px" class="table table-striped">
+        <table style="margin: 0 0 10px 10px" class="table table-striped">
           <thead>
           <tr>
             <th scope="col" >#</th>
