--- a/src/app/admin/resorts/resorts.component.html
+++ b/src/app/admin/resorts/resorts.component.html
@@ -5,7 +5,7 @@
 <div class="loader" *ngIf="isLoading"></div>
   <div style="height: 100%" class="col-md-10 offset-md-1">
   <div class="main details-container" *ngIf="!isLoading">
-  <div class="form-group form-inline">
+  <div style="align-self: flex-end" class="form-group form-inline">
     Find resort: <input #searchField class="form-control ml-2" type="text" name="searchTerm" (keyup)="updateFilter(searchField.value)"/>
   </div>
   <table class="table table-striped">
