--- a/src/app/admin/user-details/user-details.component.html
+++ b/src/app/admin/user-details/user-details.component.html
@@ -16,7 +16,7 @@
         </div>
       </div>
       <div style="align-items: flex-end; justify-content: space-between" class="col">
-        <table style="border: #9f9f9f solid 1px; margin: 0;" class="table table-striped">
+        <table style="margin: 0;" class="table table-striped">
         <thead>
         <tr>
           <th scope="col">Skill level</th>
