--- a/src/app/admin/resort-details/resort-details.component.html
+++ b/src/app/admin/resort-details/resort-details.component.html
@@ -38,9 +38,9 @@
       </div>
       <div  class="col align-items-start">
         <i class="fas fa-sort-amount-up-alt"></i>
-        <span style="background: #42A948" class="dot"></span>
-        <span style="background: #a96f42" class="dot"></span>
-        <span style="background: #a94242" class="dot"></span>
+        <span style="background: #4783c3" class="dot"></span>
+        <span style="background: #ae3c3c" class="dot"></span>
+        <span style="background: #1c1a1a" class="dot"></span>
         <span style="background: #1c1a1a" class="dot d-flex justify-content-center align-items-center"><i style="color: white; font-size: 17px" class="fas fa-skull"></i></span>
       </div>
       <div class="col align-items-start">
@@ -53,7 +53,7 @@
       </div>
     </div>
     <div style="justify-content: space-between; align-items: flex-end" class="col">
-      <div style="margin: 0 0 15px;" class="d-flex flex-column justify-content-center align-items-center details-container">
+      <div style="margin: 0 0 15px; width: 75%" class="d-flex flex-column justify-content-center align-items-center details-container">
       <div class="d-inline-flex">
         <h1 class="text-nowrap">{{resort.CityName}}</h1>
         <h2>{{resort.CountryName}}</h2>
@@ -62,7 +62,7 @@
         {{resort.Website}}
       </div>
     </div>
-      <div>
+      <div style="width: 75%">
         Elevation [m]
       <div style="margin: 10px 10px 10px 0" class="details-container">
         <div class="row">
@@ -75,7 +75,7 @@
         </div>
       </div>
       </div>
-      <div>
+      <div style="width: 75%">
       Coordinates [°]
       <div style="margin: 10px 10px 10px 0" class="details-container">
         <div class="row">
