--- a/src/app/admin/user-details/user-details.component.html
+++ b/src/app/admin/user-details/user-details.component.html
@@ -16,23 +16,23 @@
         </div>
       </div>
       <div style="align-items: flex-end; justify-content: space-between" class="col">
-        <table *ngIf="user.preferences.skillLevel != '' || user.preferences.tripCount != '' || user.preferences.skier != ''" style="margin: 0;" class="table table-striped">
+        <table style="margin: 0;" class="table table-striped">
         <thead>
         <tr>
-          <th scope="col">Skill level</th>
-          <th scope="col">Snowboarder</th>
-          <th scope="col">Skier</th>
-          <th scope="col">Holiday type</th>
-          <th scope="col">Trip count</th>
+          <th *ngIf="user.preferences.skillLevel != ''" scope="col">Skill level</th>
+          <th *ngIf="user.preferences.snowboarder != ''"scope="col">Snowboarder</th>
+          <th *ngIf="user.preferences.skier != ''" scope="col">Skier</th>
+          <th *ngIf="user.preferences.holidayType != ''" scope="col">Holiday type</th>
+          <th *ngIf="user.preferences.tripCount != ''" scope="col">Trip count</th>
         </tr>
         </thead>
           <tbody>
             <tr>
-              <th>{{user.preferences.skillLevel}}</th>
-              <th>{{user.preferences.snowboarder}}</th>
-              <th>{{user.preferences.skier}}</th>
-              <th>{{user.preferences.holidayType}}</th>
-              <th>{{user.preferences.tripCount}}</th>
+              <th *ngIf="user.preferences.skillLevel != ''" >{{user.preferences.skillLevel}}</th>
+              <th *ngIf="user.preferences.snowboarder != ''">{{user.preferences.snowboarder}}</th>
+              <th *ngIf="user.preferences.skier != ''">{{user.preferences.skier}}</th>
+              <th *ngIf="user.preferences.holidayType != ''">{{user.preferences.holidayType}}</th>
+              <th *ngIf="user.preferences.tripCount != ''">{{user.preferences.tripCount}}</th>
             </tr>
           </tbody>
         </table>
