--- a/src/app/admin/users/users.component.html
+++ b/src/app/admin/users/users.component.html
@@ -18,7 +18,7 @@
     <tbody>
     <tr *ngFor="let user of usersPage;" [routerLink]="['/admin/userDetails']" (click)="selectUser(user.uId)">
       <td style="width: 20%">{{ user.id}}</td>
-      <td style="width: 80%"><span *ngIf="user.firstName == ''">~NoName</span>{{user.firstName}}</td>
+      <td style="width: 80%">{{user.firstName}}</td>
     </tr>
     </tbody>
   </table>
