--- a/src/app/admin/navigations/navbar/navbar.component.html
+++ b/src/app/admin/navigations/navbar/navbar.component.html
@@ -6,6 +6,9 @@
     <li class="nav-item">
       <a class="nav-link padding-nav-link" [routerLink]="['/admin/resorts']" >Resorts</a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link padding-nav-link" [routerLink]="['/overview']" >Overview</a>
+    </li>
     <li class="nav-item account-bnt" (click)="signOut();">
       <a class="nav-link">Log out</a>
     </li>
