--- a/src/app/shared/ui/modals/password-modal/password-modal.component.html
+++ b/src/app/shared/ui/modals/password-modal/password-modal.component.html
@@ -8,23 +8,25 @@
   <div class="modal-body">
     <form [formGroup]="recoveryForm" (ngSubmit)="updatePassword()" class="password-form">
       <div class="form-group">
-        <input type="password" class="form-control" placeholder="Current Password" formControlName="Cpassword" [ngClass]="{ 'is-invalid': submitted && f.Cpassword.errors }">
-        <div *ngIf="submitted && f.Cpassword.errors" class="invalid-feedback">
-          <div *ngIf="f.Cpassword.errors.required">Current Password is required</div>
+        <input type="password" class="form-control" placeholder="Current Password" formControlName="currPass" [ngClass]="{ 'is-invalid': submitted && f.currPass.errors }">
+        <div *ngIf="submitted && f.currPass.errors" class="invalid-feedback">
+          <div *ngIf="f.currPass.errors.required">Current Password is required</div>
         </div>
       </div>
       <div class="form-group">
         <input type="password" class="form-control" [(ngModel)]="password" placeholder="New Password" formControlName="newPass" [ngClass]="{ 'is-invalid': submitted && f.newPass.errors }">
         <div *ngIf="submitted && f.newPass.errors" class="invalid-feedback">
           <div *ngIf="f.newPass.errors.required">New Password is required</div>
-          <div *ngIf="f.newPass.errors.pattern"> Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters.</div>
+          <div *ngIf="f.newPass.errors.minlength">New Password too short</div>
+          <div *ngIf="f.newPass.errors.maxlength">New Password too long</div>
+          <div *ngIf="f.newPass.errors.pattern"> Can consist only of numbers and letters</div>
         </div>
       </div>
       <div class="form-group">
         <input type="password" class="form-control" pattern="{{ password }}" placeholder="Repeat password" formControlName="newPass2" [ngClass]="{ 'is-invalid': submitted && f.newPass2.errors }">
         <div *ngIf="submitted && f.newPass2.errors" class="invalid-feedback">
           <div *ngIf="f.newPass2.errors.required">Please confirm new password</div>
-          <div *ngIf="f.newPass2.errors.pattern"> Passwords don't match.</div>
+          <div *ngIf="f.newPass2.errors.pattern"> Passwords don't match</div>
         </div>
       </div>
       <div class="form-group">
